unpackaged/main/default/objects/project_cloud__Minute__c/project_cloud__Minute__c.object-meta.xml
<CustomObject>
    <label>Minute</label>
    <nameField>
        <displayFormat>MIN-{00000000}</displayFormat>
        <label>Minute Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Minutes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>