unpackaged/main/default/objects/project_cloud__Minute__c/fields/project_cloud__Agenda_Item__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Agenda_Item__c</fullName>
    <inlineHelpText>This field shows what Agenda Item this Meeting Minute is related too.</inlineHelpText>
    <label>Agenda Item</label>
    <referenceTo>project_cloud__Agenda_Item__c</referenceTo>
    <relationshipLabel>Minutes</relationshipLabel>
    <relationshipName>Minutes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>