unpackaged/main/default/objects/project_cloud__Minute__c/fields/project_cloud__Editor__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field will show what user is Editing the Meeting Minute.</inlineHelpText>
    <label>Editor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Minutes</relationshipName>
    <type>Lookup</type>
</CustomField>