unpackaged/main/default/objects/project_cloud__Minute__c/fields/project_cloud__Formatted_Content__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Formatted_Content__c</fullName>
    <inlineHelpText>This field allows users to add content to the Meeting Minute.</inlineHelpText>
    <label>Formatted Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>