unpackaged/main/default/objects/project_cloud__Minute__c/fields/project_cloud__IsDraft__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsDraft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For internal use only.  Defines whether or not the record is a draft and allows tracking for editing across multiple clients (incorrect use of this field may result in deletion of a record).</description>
    <inlineHelpText>This field should remain a &#39;Read Only&#39; field. Defines whether or not the record is a draft and allows tracking for editing across multiple clients (incorrect use of this field may result in deletion of a record).</inlineHelpText>
    <label>Is Draft</label>
    <type>Checkbox</type>
</CustomField>